2004-11-10 Magnus Hagdorn
 * CF_area.py: added switch to plot mono images
 * CF_options.py: added switch to plot mono images
 * CF_loadfile.py: calculate fractional melt area
 * CF_createfile.py: produce CF compliant netCDF files
 * plotCFstats.py: plot melt fraction
 * plotCFstats.py: added switch to plot mono images

2004-11-04 Magnus Hagdorn
 * plot3DProfiles.py: plot more profiles per page
 * minor changes of plotEISMINT.py

2004-11-01 Magnus Hagdorn
 * CF_options.py: added number of input files
 * CF_profilearea.py: added text stamp to profile area
 * plot3DProfiles.py: new prog for plotting profiles from different files above each other

2004-10-22 Magnus Hagdorn
 * CF_area.py: plot profile line if requested
 * CF_colourmap.py: revert min/max finding algorithm
 * CF_loadfile.py: added ice surface variable, ie. topg+thk
 * CF_options.py: don't need to load plot options
 * CF_profilearea.py: add new class to plot multiple profiles above each other
 * plotCFvar.py: contour ice thickness/surface
 * plotProfile.py: change default size of profile plot
 * extractProfile.py: new program used for extracting data along profile
	
2004-10-22 Magnus Hagdorn
 * CF_IOrsl.py: new class for handling RSL data base
 * CF_rsl.py: plot RSL curve
 * CF_file.py: get min/max latitude and longitude
 * CF_loadfile.py: added method to interpolate field using splines,
	           added method to extraxr RSL data at geographic location
 * CF_area.py: added method to plot RSL locations on map
 * CF_options.py: added some RSL options
 * plotRSL.py: plot funky RSL diagram
 * updated README
	
2004-09-29 Magnus Hagdorn
 * CF_profile.py: remove triangulate from imports
 * plotEISMINT.py: tidy up help messages (we don't need to ask for variables)
 * ran_topo.py: added very basic random (white noise) topo generator

2004-09-28 Magnus Hagdorn
 * CF_loadfile.py: made CFchecklist public, fixed ice vol/area calculations to ignore missing data