@@ -1,3 +1,7 @@
+2004-11-18 Magnus Hagdorn
+ * CF_loadfile.py: fix bug in temperature correction
+ * CF_options.py: apply colourmaps to profiles as well
+
 2004-11-10 Magnus Hagdorn
  * CF_area.py: added switch to plot mono images
  * CF_options.py: added switch to plot mono images
